--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- ✅ Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- ✅ Mobile responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- ✅ SEO Title & Description -->
+    <title>Cryptomaty – Smart Crypto Trading Platform</title>
+    <meta
+      name="description"
+      content="Cryptomaty is an algorithmic crypto trading platform and strategy marketplace. Build, backtest, and deploy trading strategies with ease."
+    />
+    <meta
+      name="keywords"
+      content="crypto trading, algorithmic trading, strategy marketplace, Cryptomaty, backtest, deploy strategies, trading bots"
+    />
+    <meta name="author" content="Cryptomaty Team" />
+
+    <!-- ✅ Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="Cryptomaty – Smart Crypto Trading Platform" />
+    <meta
+      property="og:description"
+      content="Build, backtest, and deploy smarter crypto trading strategies with Cryptomaty."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://cryptomaty.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- ✅ Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cryptomaty – Smart Crypto Trading Platform" />
+    <meta
+      name="twitter:description"
+      content="Build, backtest, and deploy smarter crypto trading strategies with Cryptomaty."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <!-- ✅ Theme color for browsers -->
+    <meta name="theme-color" content="#FFFFFF" />
   </head>
   <body>
     <div id="root"></div>
