--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
 
     <!-- ✅ Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Logo.png" />
+<link rel="apple-touch-icon" href="/Logo.png" />
+
 
     <!-- ✅ Mobile responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,7 +29,7 @@
       property="og:description"
       content="Build, backtest, and deploy smarter crypto trading strategies with Cryptomaty."
     />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="/Logo.png" />
     <meta property="og:url" content="https://cryptomaty.com" />
     <meta property="og:type" content="website" />
 
