Added Pricing page with hero section and routing setup

--- a/index.html
+++ b/index.html
@@ -4,48 +4,50 @@
     <meta charset="UTF-8" />
 
     <!-- ✅ Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/Logo.png" />
-<link rel="apple-touch-icon" href="/Logo.png" />
-
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
 
     <!-- ✅ Mobile responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ✅ SEO Title & Description -->
-    <title>Cryptomaty – Smart Crypto Trading Platform</title>
+    <title>Algorooms – Smart Algorithmic Trading Platform</title>
     <meta
       name="description"
-      content="Cryptomaty is an algorithmic crypto trading platform and strategy marketplace. Build, backtest, and deploy trading strategies with ease."
+      content="Algorooms is an algorithmic trading platform to build, backtest, and deploy trading strategies with ease."
     />
     <meta
       name="keywords"
-      content="crypto trading, algorithmic trading, strategy marketplace, Cryptomaty, backtest, deploy strategies, trading bots"
+      content="algorooms, algo trading, algorithmic trading, backtesting, deploy strategies, trading bots, crypto trading"
     />
-    <meta name="author" content="Cryptomaty Team" />
+    <meta name="author" content="Algorooms Team" />
+
+    <!-- ✅ Canonical -->
+    <link rel="canonical" href="https://algorooms.com/" />
 
     <!-- ✅ Open Graph (Facebook, LinkedIn) -->
-    <meta property="og:title" content="Cryptomaty – Smart Crypto Trading Platform" />
+    <meta property="og:title" content="Algorooms – Smart Algorithmic Trading Platform" />
     <meta
       property="og:description"
-      content="Build, backtest, and deploy smarter crypto trading strategies with Cryptomaty."
+      content="Build, backtest, and deploy smarter trading strategies with Algorooms."
     />
-    <meta property="og:image" content="/Logo.png" />
-    <meta property="og:url" content="https://cryptomaty.com" />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://algorooms.com/" />
     <meta property="og:type" content="website" />
 
     <!-- ✅ Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cryptomaty – Smart Crypto Trading Platform" />
+    <meta name="twitter:title" content="Algorooms – Smart Algorithmic Trading Platform" />
     <meta
       name="twitter:description"
-      content="Build, backtest, and deploy smarter crypto trading strategies with Cryptomaty."
+      content="Build, backtest, and deploy smarter trading strategies with Algorooms."
     />
     <meta name="twitter:image" content="/logo.png" />
 
-    <!-- ✅ Theme color for browsers -->
-    <meta name="theme-color" content="#FFFFFF" />
+    <!-- ✅ Theme color (matches site BG) -->
+    <meta name="theme-color" content="#F0F0F0" />
   </head>
-  <body>
+  <body class="overflow-x-clip">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
