--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- ✅ Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
 
     <!-- ✅ Mobile responsive -->
